[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eve"
version = "1.0.0"
description = "Unveiling Encoder-Free Vision-Language Models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision", "transformers", "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft", "bitsandbytes", "xformers", "markdown2[all]", "numpy", 
    "scikit-learn", "urllib3", "gradio", "requests", "httpx", "uvicorn", "fastapi",
    "ftfy", "einops", "einops-exts", "timm", "prettytable", "openpyxl"
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb", "tensorboardX"]

[project.urls]
"Homepage" = "https://eve.github.io/"
"Bug Tracker" = "https://github.com/baaivision/EVE/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
